# RTS-game

./: .gitignore  Doxyfile  README.md  Untitled Diagram.drawio  dependencies.drawio  game_objects.md  index.html
.github/workflows/: cmake.yml
RTS-game/: RTS-game.sln
RTS-game/RTS-game/: Camera.cpp  Camera.h  ClassDiagram.cd  Game_Map.cpp  Game_Map.h  Makefile  RTS-game.vcxproj  RTS-game.vcxproj.filters  Source.cpp  adapter.cpp  block_type.h  cell.h  clock.cpp  clock.h  draw.cpp  drawable.h  game_map.cpp  game_map.h  grid_function.cpp  grid_function.h  main.cpp  texture.h
doc/html/: abstract__immovable__unit_8h.html  abstract__immovable__unit_8h_source.html  abstract__unit__factory_8h.html  abstract__unit__factory_8h_source.html  actionable_8h.html  actionable_8h_source.html  adapter_8cpp.html  adapter_8h.html  adapter_8h.js  adapter_8h_source.html  annotated.html  annotated_dup.js  behavior_8cpp.html  behavior_8h.html  behavior_8h_source.html  behavior__around__point_8cpp.html  behavior__around__point_8h.html  behavior__around__point_8h_source.html  behavior__bullet_8cpp.html  behavior__bullet_8h.html  (+333 more)
src/: CMakeLists.txt  adapter.h  clock.h  entity.h
src/SDL2/lib/: libSDL2.la  libSDL2_test.la  libSDL2main.la
src/behaviors/: CMakeLists.txt  behavior.cpp  behavior.h  behavior_around_point.cpp  behavior_around_point.h  behavior_bullet.cpp  behavior_bullet.h  behavior_hunter.cpp  behavior_hunter.h  behavior_random.cpp  behavior_scout.cpp  behavior_scout.h  behavior_tower.cpp
src/managers/: CMakeLists.txt  game_manager.cpp  game_manager.h  texture_manager.cpp  user_manager.cpp  user_manager.h
src/map/: CMakeLists.txt  block_type.h  camera.h  game_map.cpp  map_layer.h  map_point.cpp  map_point.h
src/map/grid/: grid.h  grid_function.cpp  grid_function.h  grid_neighbors.cpp  grid_neighbors.h
src/map/surface/: diamond_square.cpp  diamond_square.h  surface_layer.cpp  surface_layer.h
src/map/underground/: underground_layer.cpp  underground_layer.h
src/player/: CMakeLists.txt  player.cpp  player.h  player_owner.h  players_info.cpp  players_info.h
src/units/: CMakeLists.txt  abstract_immovable_unit.h  actionable.h  building.cpp  building.h  drawable.h  drawable_entity.h  entity.cpp  unit.cpp  unit_factory.cpp  unit_factory.h  unit_type.h  with_hitbox.h  with_player.h
src/utils/: CMakeLists.txt  time_measurer.cpp  time_measurer.h
(+199 files in other folders)
